# cmake-conditionals

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
